package NYT.NTabletClient.NProto;

import "yt/core/misc/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartTransaction
{
    // NB: Tablet transaction ids are generated by clients.
    required NYT.NProto.TGuid transaction_id = 1;

    required int64 start_timestamp = 2;

    // Transaction timeout (in ms).
    required int32 timeout = 3;
}

message TRspStartTransaction
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqRead
{
    required NYT.NProto.TGuid tablet_id = 1;
    required int64 timestamp = 2;
    required bytes encoded_request = 3;
    optional int32 response_codec = 4;
}

message TRspRead
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqWrite
{
    required NYT.NProto.TGuid transaction_id = 1;
    required NYT.NProto.TGuid tablet_id = 2;
    required int32 durability = 3; // EDurability
    // Wire-encoded request is passed via attachments.
}

message TRspWrite
{
    // Wire-encoded response is passed via attachments.
}

////////////////////////////////////////////////////////////////////////////////

